Домашняя работа 1 (правки)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="mid__menu center">
             <div class="mid__game">
                 <div class="mid__game_img">
-                    <img src="img/game1.png" alt="">
+                    <img src="img/game1.png" alt="Изображение первой игры">
                 </div>
                 <div class="mid__game_text">
                     <a href="index.html">Игра 1</a>
@@ -36,7 +36,7 @@
             </div>
             <div class="mid__game">
                 <div class="mid__game_img">
-                    <img src="img/game2.png" alt="">
+                    <img src="img/game2.png" alt="Изображение второй игры">
                 </div>
                 <div class="mid__game_text">
                     <a href="index.html">Игра 2</a>
@@ -44,7 +44,7 @@
             </div>
             <div class="mid__game">
                 <div class="mid__game_img">
-                    <img src="img/game3.png" alt="">
+                    <img src="img/game3.png" alt="Изображение третьей игры">
                 </div>
                 <div class="mid__game_text">
                     <a href="index.html">Игра 3</a>
