--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="mid__menu center">
             <div class="mid__game">
                 <div class="mid__game_img">
-                    <img src="img/game1.png" alt="">
+                    <img src="img/game1.png" alt="Изображение первой игры">
                 </div>
                 <div class="mid__game_text">
                     <a href="index.html">Игра 1</a>
@@ -36,7 +36,7 @@
             </div>
             <div class="mid__game">
                 <div class="mid__game_img">
-                    <img src="img/game2.png" alt="">
+                    <img src="img/game2.png" alt="Изображение второй игры">
                 </div>
                 <div class="mid__game_text">
                     <a href="index.html">Игра 2</a>
@@ -44,14 +44,42 @@
             </div>
             <div class="mid__game">
                 <div class="mid__game_img">
-                    <img src="img/game3.png" alt="">
+                    <img src="img/game3.png" alt="Изображение третьей игры">
                 </div>
                 <div class="mid__game_text">
                     <a href="index.html">Игра 3</a>
                 </div>
             </div>
         </div>
+        <div class="mid__menumobile">
+            <div class="mid__gamemobile">
+                <div class="mid__gamemobile_img">
+                    <img src="img/game1mobile.png" alt="Изображение первой игры">
+                </div>
+                <div class="mid__gamemobile_text">
+                    <a href="index.html">Игра 1</a>
+                </div>
+            </div>
+            <div class="mid__gamemobile">
+                <div class="mid__gamemobile_img">
+                    <img src="img/game2mobile.png" alt="Изображение второй игры">
+                </div>
+                <div class="mid__gamemobile_text">
+                    <a href="index.html">Игра 2</a>
+                </div>
+            </div>
+            <div class="mid__gamemobile">
+                <div class="mid__gamemobile_img">
+                    <img src="img/game3mobile.png" alt="Изображение третьей игры">
+                </div>
+                <div class="mid__gamemobile_text">
+                    <a href="index.html">Игра 3</a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
+
+
 
 </html>
