--- a/index.html
+++ b/index.html
@@ -27,26 +27,52 @@
     <div class="mid">
         <div class="mid__menu center">
             <div class="mid__game">
-                <div class="mid__game_img">
+                <div class="mid__game-img">
                     <img src="img/game1.png" alt="Изображение первой игры">
                 </div>
-                <div class="mid__game_text">
+                <div class="mid__game-text">
                     <a href="index.html">Игра 1</a>
                 </div>
             </div>
             <div class="mid__game">
-                <div class="mid__game_img">
+                <div class="mid__game-img">
                     <img src="img/game2.png" alt="Изображение второй игры">
                 </div>
-                <div class="mid__game_text">
+                <div class="mid__game-text">
                     <a href="index.html">Игра 2</a>
                 </div>
             </div>
             <div class="mid__game">
-                <div class="mid__game_img">
+                <div class="mid__game-img">
                     <img src="img/game3.png" alt="Изображение третьей игры">
                 </div>
-                <div class="mid__game_text">
+                <div class="mid__game-text">
+                    <a href="index.html">Игра 3</a>
+                </div>
+            </div>
+        </div>
+        <div class="mid__menumobile">
+            <div class="mid__gamemobile">
+                <div class="mid__gamemobile-img">
+                    <img src="img/game1mobile.png" alt="Изображение первой игры">
+                </div>
+                <div class="mid__gamemobile-text">
+                    <a href="index.html">Игра 1</a>
+                </div>
+            </div>
+            <div class="mid__gamemobile">
+                <div class="mid__gamemobile-img">
+                    <img src="img/game2mobile.png" alt="Изображение второй игры">
+                </div>
+                <div class="mid__gamemobile-text">
+                    <a href="index.html">Игра 2</a>
+                </div>
+            </div>
+            <div class="mid__gamemobile">
+                <div class="mid__gamemobile-img">
+                    <img src="img/game3mobile.png" alt="Изображение третьей игры">
+                </div>
+                <div class="mid__gamemobile-text">
                     <a href="index.html">Игра 3</a>
                 </div>
             </div>
